// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItem should hide the chevron when showChevron is false 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Help"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          clipPath="a"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10Zm0-2a8 8 0 1 0 0-16.001A8 8 0 0 0 12 20Zm-1-5h2v2h-2v-2Zm2-1.645V14h-2v-1.5a1 1 0 0 1 1-1 1.5 1.5 0 1 0-1.471-1.794l-1.962-.393A3.5 3.5 0 1 1 13 13.355Z"
            fill={
              {
                "payload": 4283321190,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
        <RNSVGDefs>
          <RNSVGClipPath
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            name="a"
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGClipPath>
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      accessibilityLabel="Help"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Help
    </Text>
  </View>
</View>
`;

exports[`SettingsItem should match to snapshot 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Settings"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          clipPath="a"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="m12 1 9.5 5.5v11L12 23l-9.5-5.5v-11L12 1Zm0 2.311L4.5 7.653v8.694l7.5 4.342 7.5-4.342V7.653L12 3.311ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
            fill={
              {
                "payload": 4283321190,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
        <RNSVGDefs>
          <RNSVGClipPath
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            name="a"
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGClipPath>
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      accessibilityLabel="Settings"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Settings
    </Text>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGGroup
        clipPath="a"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M12.172 12 9.343 9.172l1.414-1.415L15 12l-4.243 4.243-1.414-1.415L12.172 12Z"
          fill={
            {
              "payload": 4283321190,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
      <RNSVGDefs>
        <RNSVGClipPath
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          name="a"
        >
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGClipPath>
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`SettingsItem should show a chevron by default 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Notifications"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M5.778 16.395h12.444v-5.834c0-3.251-2.786-5.887-6.222-5.887-3.436 0-6.222 2.636-6.222 5.887v5.834ZM12 3c4.418 0 8 3.385 8 7.56v7.51H4v-7.51C4 6.386 7.582 3 12 3ZM9.778 18.907h4.444c0 .555-.234 1.087-.65 1.48A2.294 2.294 0 0 1 12 21c-.59 0-1.155-.22-1.571-.613a2.033 2.033 0 0 1-.651-1.48Z"
          fill={
            {
              "payload": 4283321190,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      accessibilityLabel="Notifications"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Notifications
    </Text>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGGroup
        clipPath="a"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M12.172 12 9.343 9.172l1.414-1.415L15 12l-4.243 4.243-1.414-1.415L12.172 12Z"
          fill={
            {
              "payload": 4283321190,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
      <RNSVGDefs>
        <RNSVGClipPath
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          name="a"
        >
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGClipPath>
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
